test/invalid/line_directive_empty.d
//T error: line_directive_empty.d:4:5:
//T error: A positive integer argument is expected after `#line`.

#line
